logo novo/resultados robocup/foto da equipe atualizada

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2">
-          <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><img class="classLogo" src="./images/robocin-04.png" height="75px" width="245px"><span class="img-primary"></span> </a></h1>
+          <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><img class="classLogo" src="./images/logo.svg" height="75px" width="245px" style="height: 50px !important; padding-top: 0px !important; margin-top: 10px !important; margin-bottom: 10px !important;"><span class="img-primary"></span> </a></h1>
           </div>
 
           <div class="col-12 col-md-10 d-none d-xl-block">
@@ -102,7 +102,7 @@
 
   
      
-    <div class="site-blocks-cover overlay" style="background-image: url(images/capa.jpg);" data-aos="fade" id="home-section">
+    <div class="site-blocks-cover overlay" style="background-image: url(images/capa.jpeg);" data-aos="fade" id="home-section">
 
       <div class="container">
         <div class="row align-items-center justify-content-center">
@@ -130,6 +130,11 @@
               <div class="slide">
                 <h1 class="text-uppercase" data-aos="fade-up" tkey="fourth-slide-title"></h1>
                 <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100" tkey="fourth-slide-desc" ></p>
+              </div>
+
+              <div class="slide">
+                <h1 class="text-uppercase" data-aos="fade-up" tkey="fifth-slide-title"></h1>
+                <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100" tkey="fifth-slide-desc" ></p>
               </div>
 
 
