--- a/simulacao2d.html
+++ b/simulacao2d.html
@@ -139,6 +139,7 @@
               <thead class="bg-primary">
                 <tr>
                   <th scope="col">Competition</th>
+                  <th scope="col">2022</th>
                   <th scope="col">2021</th>
                   <th scope="col">2020</th>
                   <th scope="col">2019</th>
@@ -148,6 +149,7 @@
               <tbody>
                 <tr>
                   <th scope="row">RoboCup</th>
+                  <td tkey="cat.2d.robocup22"></td>
                   <td tkey="cat.2d.robocup21"></td>
                   <td tkey="cat.2d.robocup20"></td>
                   <td tkey="cat.2d.robocup19"></td>
@@ -155,6 +157,7 @@
                 </tr>
                 <tr>
                   <th scope="row">LARC</th>
+                  <td ></td>
                   <td><span class="badge badge-pill badge-warning" tkey="cat.2d.larc21"></span></td>
                   <td tkey="cat.2d.larc20"></td>
                   <td tkey="cat.2d.larc19"></td>
@@ -162,6 +165,7 @@
                 </tr>
                 <tr>
                   <th scope="row">IRONCup</th>
+                  <td></td>
                   <td tkey="cat.2d.iron21"></td>
                   <td tkey="cat.2d.iron20"></td>
                   <td tkey="cat.2d.iron19"></td>
