--- a/smallsizeleague.html
+++ b/smallsizeleague.html
@@ -151,6 +151,7 @@
             <thead class="bg-primary">
               <tr>
                 <th scope="col">Competition</th>
+                <th scope="col">2022</th>
                 <th scope="col">2021</th>
                 <th scope="col">2020</th>
                 <th scope="col">2019</th>
@@ -160,6 +161,7 @@
             <tbody>
               <tr>
                 <th scope="row">RoboCup</th>
+                <td tkey="cat.ssl.robocup22"></td>
                 <td tkey="cat.ssl.robocup21"></td>
                 <td tkey="cat.ssl.robocup20"></td>
                 <td tkey="cat.ssl.robocup19"></td>
@@ -167,6 +169,7 @@
               </tr>
               <tr>
                 <th scope="row">LARC</th>
+                <td></td>
                 <td><span class="badge badge-pill badge-warning" tkey="cat.ssl.larc21"></span></td>
                 <td><span class="badge badge-pill badge-warning" tkey="cat.ssl.larc20"></span></td>
                 <td tkey="cat.ssl.larc19"></td>
