Updated logo and removed links to "seguidor de linha"

--- a/deepvsss.html
+++ b/deepvsss.html
@@ -55,7 +55,7 @@
             <div class="row align-items-center">
               
               <div class="col-6 col-xl-2">
-              <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><img class="classLogo" src="./images/robocin-04.png" height="75px" width="245px"><span class="img-primary"></span> </a></h1>
+              <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><img class="classLogo" src="./images/logo_horizontalV1.png" height="75px" width="160px" style="height: 50px !important; padding-top: 0px !important; margin-top: 20px !important; margin-bottom: 10px !important;"><span class="img-primary"></span> </a></h1>
               </div>
     
               <div class="col-12 col-md-10 d-none d-xl-block">
@@ -66,7 +66,6 @@
                     <li class="has-children">
                       <a tkey="categ"></a>
                       <ul class="dropdown">
-                        <li><a class="nav-link" id="lf" href="./seguidordelinha.html" tkey="lf"></a></li>
                         <li><a class="nav-link" id="ssl" href="./smallsizeleague.html" tkey="cat.ssl"></a></li>
                         <li><a class="nav-link" id="vss" href="./verysmallsize.html" tkey="cat.vss"></a></li>
                         <li><a class="nav-link" id="twod" href="./simulacao2d.html" tkey="2D"></a></li>
