--- a/verysmallsize.html
+++ b/verysmallsize.html
@@ -56,7 +56,7 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2">
-          <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><img class="classLogo" src="./images/robocin-04.png" height="75px" width="245px"><span class="img-primary"></span> </a></h1>
+          <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0"><img class="classLogo" src="./images/logo_horizontalV1.png" height="75px" width="160px" style="height: 50px !important; padding-top: 0px !important; margin-top: 20px !important; margin-bottom: 10px !important;"><span class="img-primary"></span> </a></h1>
           </div>
 
           <div class="col-12 col-md-10 d-none d-xl-block">
@@ -67,7 +67,7 @@
                 <li class="has-children">
                     <a href="#" tkey="categ"></a>
                     <ul class="dropdown">
-                      <li><a href="./seguidordelinha.html" tkey="lf"></a></li>
+                      <!--<li><a href="./seguidordelinha.html" tkey="lf"></a></li>-->
                       <li><a class="nav-link" id="ssl" href="./smallsizeleague.html" tkey="ssl"></a></li>
                       <li><a class="nav-link" id="vss" href="./verysmallsize.html" tkey="vsss"></a></li>
                       <li><a class="nav-link" id="twod" href="./simulacao2d.html" tkey="2D"></a></li>
@@ -191,7 +191,7 @@
             <div class="sidebar-box">
               <div class="categories">
                 <h3 tkey="categ"></h3>
-                <li><a href="seguidordelinha.html" tkey="lf"></a></li>
+                <!--<li><a href="seguidordelinha.html" tkey="lf"></a></li>-->
                 <li><a href="simulacao2d.html" tkey="cat.2d"></a></li>
                 <li><a href="smallsizeleague.html">Small size league</a></li>
               </div>
