Created basic "drone" page and links

--- a/seletiva.html
+++ b/seletiva.html
@@ -67,7 +67,8 @@
                     <li class="has-children">
                       <a tkey="categ"></a>
                       <ul class="dropdown">
-                        <!-- <li><a class="nav-link" id="lf" href="./seguidordelinha.html" tkey="lf"></a></li> -->
+                        <!-- <li><a class="nav-link" id="drone" href="./drone.html" tkey="drone"></a></li>
+                    <li><a class="nav-link" id="lf" href="./seguidordelinha.html" tkey="lf"></a></li> -->
                         <li><a class="nav-link" id="ssl" href="./smallsizeleague.html" tkey="cat.ssl"></a></li>
                         <li><a class="nav-link" id="vss" href="./verysmallsize.html" tkey="cat.vss"></a></li>
                         <li><a class="nav-link" id="twod" href="./simulacao2d.html" tkey="2D"></a></li>
