--- a/verysmallsize.html
+++ b/verysmallsize.html
@@ -191,6 +191,7 @@
             <div class="sidebar-box">
               <div class="categories">
                 <h3 tkey="categ"></h3>
+                <li><a href="drone.html" tkey="drone"></a></li>
                 <li><a href="seguidordelinha.html" tkey="lf"></a></li>
                 <li><a href="simulacao2d.html" tkey="cat.2d"></a></li>
                 <li><a href="smallsizeleague.html">Small size league</a></li>
