--- a/smallsizeleague.html
+++ b/smallsizeleague.html
@@ -67,6 +67,7 @@
                 <li class="has-children">
                   <a tkey="categ"></a>
                   <ul class="dropdown">
+                    <li><a class="nav-link" id="drone" href="./drone.html" tkey="drone"></a></li>
                     <li><a class="nav-link" id="lf" href="./seguidordelinha.html" tkey="lf"></a></li>
                     <li><a class="nav-link" id="ssl" href="./smallsizeleague.html" tkey="cat.ssl"></a></li>
                     <li><a class="nav-link" id="vss" href="./verysmallsize.html" tkey="cat.vss"></a></li>
@@ -139,6 +140,7 @@
             <div class="sidebar-box">
               <div class="categories">
                 <h3 tkey="categ"></h3>
+                <li><a href="drone.html" tkey="drone"></a></li>
                 <li><a href="seguidordelinha.html" tkey="lf"></a></li>
                 <li><a href="simulacao2d.html" tkey="cat.2d"></a></li>
                 <li><a href="verysmallsize.html" tkey="cat.vss"></a></li>
