initial 2023 seletiva site

--- a/seletiva.html
+++ b/seletiva.html
@@ -104,21 +104,23 @@
 
           <div class="jumbotron bg-light" id="j-landing">
             <div class="s" style="margin: auto;">
-            <h1 class="display-2" style="text-align: center" id="landing-intro">Bem-vindos à seletiva RobôCIn 2022!</h1>
+            <h1 class="display-2" style="text-align: center" id="landing-intro">Seletiva RobôCIn 2023!</h1>
               <p class="col-md-1; lead" style="text-align: center;" id="landing-description">
-                O processo seletivo este ano será 100% presencial. 
-                Haverão apresentações das equipes no nosso laboratório e visita nos centros durante as semanas das inscrições. Para participar da visita a sala do RobôCIn, por favor preeencha o formário de visita, para termos noção de quantas pessoas irão visitar e assim respeitarmos o limite da nossa sala.
-                Não perca tempo e faça ja sua inscrição.
+                Nesta pagina você encontra informações do nosso processo seletivo para o ano de 2023. 
+                Acesse o nosso edital para mais informações.
             </p> 
             </div>
           </div> 
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Inscreva-se!</h1>
-              <p class="lead">O período de inscrições está aberto! :)</p>
-              <a class="btn btn-secondary" href="https://forms.gle/EB6NN29S77F1Wy417" role="button" target="_blank">Formulário de inscrição</a>
-              <a class="btn btn-secondary" href=" https://forms.gle/FayXCZ1zmWzXatE8A" role="button" target="_blank">Formulário para visita</a>
-              <a class="btn btn-secondary" href="https://robocin.com.br/archives/ps/Edital_Processo_Seletivo_RoboCIn_2022.pdf" role="button" target="_blank">Edital</a>
+              <!-- <h1 class="display-4">Inscreva-se!</h1> -->
+              <p class="lead">O edital e formularios de inscrições estarão disponiveis em breve.</p>
+              <div>
+                <a class="btn btn-secondary mb-2" role="button" target="_blank">Edital</a>
+              </div>
+              <div>
+                <a class="btn btn-secondary mb-2" role="button" target="_blank">Formulário de inscrição</a>
+              </div>
               <!-- <a class="btn btn-secondary" href="https://docs.google.com/document/d/1-3mkRtr8uNBKlBhNLWjSf1NYLovy8VuNnpnf6vnE2Cc/edit" role="button" target="_blank">Discord</a> -->
             </div>
           </div>
@@ -132,7 +134,8 @@
               <div class="row mb-5 justify-content-between">
                 <div class="col-md-4">
                   <h3 class="text-center" id="info-title">Calendario</h3>
-                  <ul class="list-group">
+                  <p class="text-center">Em Breve</p>
+                  <!-- <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Inscrições
                       <span class="badge badge-primary badge-pill">01/08 até 14/08</span>
@@ -181,11 +184,12 @@
                       Resultado final
                       <span class="badge badge-primary badge-pill">entre 19/09 e 22/09</span>
                     </li>
-                  </ul>
+                  </ul> -->
                 </div>
                 <div class="col-md-4">
                   <h3 class="text-center" id="info-title">Projetos</h3>
-                  <ul class="list-group">
+                  <p class="text-center">Em Breve</p>
+                  <!-- <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Comunicação
                       <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
@@ -214,10 +218,11 @@
                       Software SSL/VSS
                       <a href="https://robocin.com.br/archives/ps/Software_VSS_SSL_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
                     </li>
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
-
+            </div>
+<!-- 
               <div class="col-12 text-center" data-aos="fade-up">
                 <h2 class="section-title mb-3" id="info">Perguntas Frequentes</h2>
               </div>
@@ -336,9 +341,6 @@
                         R: Fique atento ao seu e-mail fornecido no formulário de inscrição, lhe enviaremos o resultado por ele.
                       </p>
                     </li>
-                    <!-- <li class="list-group-item d-flex justify-content-between align-items-center"> -->
-                      
-                    <!-- </li> -->
                   </ul>
                   <p>
                     Ficou com alguma dúvida que não foi respondida? Entrar em contato com a gente!
@@ -353,7 +355,7 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
                 <!--
                 <div class="col-md-4">
                   <h3 class="text-center" id="info-title">Projetos</h3>
