--- a/seletiva.html
+++ b/seletiva.html
@@ -188,37 +188,49 @@
                 </div>
                 <div class="col-md-4">
                   <h3 class="text-center" id="info-title">Projetos</h3>
-                  <p class="text-center">Em Breve</p>
-                  <!-- <ul class="list-group">
+                  <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Comunicação
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
+                      Administração
+                      <a>Em Breve</a>
+                      <!-- <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a> -->
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Drone
-                      <a href="https://robocin.com.br/archives/ps/Drones_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
+                      Comunicação
+                      <a>Em Breve</a>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Drones
+                      <a>Em Breve</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Eletrônica
-                      <a href="https://robocin.com.br/archives/ps/Eletronica_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
+                      <a>Em Breve</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Embarcados
-                      <a href="https://robocin.com.br/archives/ps/Embarcados_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
+                      <a>Em Breve</a>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Front-end
+                      <a>Em Breve</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Mecânica
-                      <a href="https://robocin.com.br/archives/ps/Mecânica_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
+                      <a>Em Breve</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Software 2D
-                      <a href="https://robocin.com.br/archives/ps/Software_2D_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
+                      <a>Em Breve</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Software SSL/VSS
-                      <a href="https://robocin.com.br/archives/ps/Software_VSS_SSL_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a>
+                      Software SSL
+                      <a>Em Breve</a>
                     </li>
-                  </ul> -->
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Software VSS
+                      <a>Em Breve</a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
