tabela de calendario da seletiva 2023

--- a/seletiva.html
+++ b/seletiva.html
@@ -134,57 +134,28 @@
               <div class="row mb-5 justify-content-between">
                 <div class="col-md-4">
                   <h3 class="text-center" id="info-title">Calendario</h3>
-                  <p class="text-center">Em Breve</p>
-                  <!-- <ul class="list-group">
+                  <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Inscrições
-                      <span class="badge badge-primary badge-pill">01/08 até 14/08</span>
+                      <span class="badge badge-primary badge-pill">15 de Março até 1 de Abril</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Visita Meninas
-                      <span class="badge badge-primary badge-pill">04/08 das 10h às 11h</span>
+                      Projeto
+                      <span class="badge badge-primary badge-pill">2 de Abril até 3 de Maio</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Visita Geral 1
-                      <span class="badge badge-primary badge-pill">05/08 das 10h às 11h</span>
+                      Apresentação de Projeto
+                      <span class="badge badge-primary badge-pill">Dia 6 de Maio</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Visita Geral 2
-                      <span class="badge badge-primary badge-pill">09/08 das 13h às 14h</span>
+                      Dinâmica em Grupo
+                      <span class="badge badge-primary badge-pill">Dia 13 de Maio</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Visita no CTG
-                      <span class="badge badge-primary badge-pill">10/08 das 10h às 12h</span>
+                      Entrevistas
+                      <span class="badge badge-primary badge-pill">15 de Maio a 24 de Maio</span>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Visita no CAC
-                      <span class="badge badge-primary badge-pill">11/08 das 10h às 11h</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Visita na Area 2
-                      <span class="badge badge-primary badge-pill">12/08 das 10h às 12h</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Projeto Individual
-                      <span class="badge badge-primary badge-pill">15/08 até 29/08</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Apresentação de Projetos
-                      <span class="badge badge-primary badge-pill">03/09</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Dinâmica em grupo
-                      <span class="badge badge-primary badge-pill">09/09 e 10/09</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Entrevista individual
-                      <span class="badge badge-primary badge-pill">11/09 até 18/09</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Resultado final
-                      <span class="badge badge-primary badge-pill">entre 19/09 e 22/09</span>
-                    </li>
-                  </ul> -->
+                  </ul>
                 </div>
                 <div class="col-md-4">
                   <h3 class="text-center" id="info-title">Projetos</h3>
