wip: tabela projetos edital + video

--- a/seletiva.html
+++ b/seletiva.html
@@ -160,10 +160,11 @@
                 <div class="col-md-4">
                   <h3 class="text-center" id="info-title">Projetos</h3>
                   <ul class="list-group">
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                      Administração
-                      <a>Em Breve</a>
-                      <!-- <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Acessar</a> -->
+                    <li class="list-group-item d-flex align-items-center justify-content-between">
+                      <div class="mr-auto">Administração</div>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
+                      |
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Comunicação
