--- a/seletiva.html
+++ b/seletiva.html
@@ -137,27 +137,27 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Inscrições
-                      <span class="badge badge-primary badge-pill">15 de Março até 1 de Abril</span>
+                      <span class="badge badge-secondary badge-pill">15 de Março até 1 de Abril</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Meetups
-                      <span class="badge badge-primary badge-pill">2 de Abril até 7 de Abril</span>
+                      <span class="badge badge-secondary badge-pill">2 de Abril até 7 de Abril</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Projeto
-                      <span class="badge badge-primary badge-pill">2 de Abril até 4 de Maio</span>
+                      <span class="badge badge-secondary badge-pill">2 de Abril até 4 de Maio</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Apresentação de Projeto
-                      <span class="badge badge-primary badge-pill">Dia 6 de Maio</span>
+                      <span class="badge badge-secondary badge-pill">Dia 6 de Maio</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Dinâmica em Grupo
-                      <span class="badge badge-primary badge-pill">Dia 3 de Junho</span>
+                      <span class="badge badge-secondary badge-pill">Dia 3 de Junho</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Entrevistas
-                      <span class="badge badge-primary badge-pill">5 de Junho até 10 de Junho</span>
+                      <span class="badge badge-secondary badge-pill">5 de Junho até 10 de Junho</span>
                     </li>
                   </ul>
                 </div>
@@ -169,38 +169,38 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Área 2
-                      <span class="badge badge-primary badge-pill">21 de Março, 11:30 até 12:30</span>
+                      <span class="badge badge-secondary badge-pill">21 de Março, 11:30 até 12:30</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       CTG
-                      <span class="badge badge-primary badge-pill">22 de Março, 11:30 até 12:30</span>
+                      <span class="badge badge-secondary badge-pill">22 de Março, 11:30 até 12:30</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       CAC
-                      <span class="badge badge-primary badge-pill">23 de Março, 11:30 até 12:30</span>
+                      <span class="badge badge-secondary badge-pill">23 de Março, 11:30 até 12:30</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       CCSA
-                      <span class="badge badge-primary badge-pill">23 de Março, 17:30 até 18:30</span>
+                      <span class="badge badge-secondary badge-pill">23 de Março, 17:30 até 18:30</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Visitas ao laboratório do RobôCIn:
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       1ᵃ Visita Geral
-                      <span class="badge badge-primary badge-pill">27 de Março, 11:30 até 12:30</span>
+                      <span class="badge badge-secondary badge-pill">27 de Março, 11:30 até 12:30</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       2ᵃ Visita Geral
-                      <span class="badge badge-primary badge-pill">27 de Março, 14:30 até 15:30</span>
+                      <span class="badge badge-secondary badge-pill">27 de Março, 14:30 até 15:30</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       Visita Meninas
-                      <span class="badge badge-primary badge-pill">29 de Março, 11:30 até 12:30</span>
+                      <span class="badge badge-secondary badge-pill">29 de Março, 11:30 até 12:30</span>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                       3ᵃ Visita Geral
-                      <span class="badge badge-primary badge-pill">29 de Março, 17:30 até 18:30</span>
+                      <span class="badge badge-secondary badge-pill">29 de Março, 17:30 até 18:30</span>
                     </li>
                   </ul>
                 </div>
@@ -209,63 +209,52 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Administração</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
-                      |
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Comunicação</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
-                      |
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
-                    </li>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Drones</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
-                      |
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Eletrônica</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
-                      |
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Embarcados</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
-                      |
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Front-end</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
-                      |
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Mecânica</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
-                      |
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Software 2D</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
-                      |
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Software SSL</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
-                      |
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Software VSS</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Edital</a> 
-                      |
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="nav-link">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                   </ul>
                 </div>
