muda botões de links para desabilitados

--- a/seletiva.html
+++ b/seletiva.html
@@ -115,13 +115,12 @@
             <div class="container">
               <!-- <h1 class="display-4">Inscreva-se!</h1> -->
               <p class="lead">O edital e formularios de inscrições estarão disponiveis em breve.</p>
-              <div>
-                <a class="btn btn-secondary mb-2" role="button" target="_blank">Edital</a>
-              </div>
-              <div>
-                <a class="btn btn-secondary mb-2" role="button" target="_blank">Formulário de inscrição</a>
-              </div>
-              <!-- <a class="btn btn-secondary" href="https://docs.google.com/document/d/1-3mkRtr8uNBKlBhNLWjSf1NYLovy8VuNnpnf6vnE2Cc/edit" role="button" target="_blank">Discord</a> -->
+              <form action="">
+                <button type="submit" class="btn btn-secondary mb-2" disabled>Edital</button>
+              </form>
+              <form action="">
+                <button type="submit" class="btn btn-secondary mb-2" disabled>Formulário de inscrição</button>
+              </form>
             </div>
           </div>
 
